# sweeper-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/: categories.rs  config.rs  main.rs
src/scanner/: mod.rs
src/ui/: app.rs  components.rs  mod.rs
