[package]
name = "sweeper-rust"
version = "0.1.0"
edition = "2021"
authors = ["Adabraka Team"]
license = "MIT"
description = "A fast, safe disk cleanup utility for developers. Frees storage by removing dev artifacts, caches, and temporary files."
repository = "https://github.com/augani/sweeper-rust"
keywords = ["cleanup", "disk", "storage", "cache", "developer-tools"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
gpui = "0.2.0"
adabraka-ui = { path = "../adabraka-ui" }
smallvec = "1.13"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
walkdir = "2.5"
bytesize = "1.3"
chrono = "0.4"
trash = "5.1"
rayon = "1.10"
crossbeam-channel = "0.5"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

[features]
default = []

[[bin]]
name = "sweeper"
path = "src/main.rs"
